--- a/angular-client/src/app/postIT/postit.component.html
+++ b/angular-client/src/app/postIT/postit.component.html
@@ -1,16 +1,4 @@
 <div>
-  <div className="InputAdd">
-    <h3>Legg til ny i databasen</h3>
-    <div class="form-group" id="title" type="text" label="Text" >
-      <input class="form-control" type="text" placeholder="Tittel" />
-    </div>
-    <div class="form-group" id="category" type="text" label="Text" >
-      <input class="form-control" type="text" placeholder="Kategori" />
-    </div>
-    <div class="form-group" id="description" type="text" label="Text" >
-      <input class="form-control" type="text" placeholder="Beskrivelse" />
-    </div>
+  <new-postit></new-postit>
 
-    <Button bsStyle="primary" type="submit">Legg til</Button>
-  </div>
 </div>
