added more content

--- a/angular-client/src/app/github/github.component.html
+++ b/angular-client/src/app/github/github.component.html
@@ -1,1 +1,7 @@
-<h1> {{title}} </h1>
+<div>
+  <h1> {{title}} </h1>
+  <p>
+    Hvis du ønsker å se koden, mens du følger tutorialen, eller bare ønsker å klone prosjektet kan du gjøre det her.
+  </p>
+  <h5>Link til <a target="_blank" href="https://github.com/skaugvoll/postIT">Repository</a> på Github</h5>
+</div>
