added <hr> under <h1> with some inline css

--- a/angular-client/src/app/tutorial/tutorial.component.html
+++ b/angular-client/src/app/tutorial/tutorial.component.html
@@ -1,5 +1,6 @@
 <div>
   <h1>{{title}}</h1>
+  <hr style="margin-top: -10px">
   <p>
     Hvis du ønsker å finne ut, og lære! hvordan vi har laget denne nettsiden, kan jeg avsløre at den bruker en backend server,
     MongoDB og et selv skrevet RESTapi. Hvis dette høres kult ut, og du ønsker å finne ut mer kan du lese tutorialen vår!
