--- a/angular-client/src/app/github/github.component.html
+++ b/angular-client/src/app/github/github.component.html
@@ -1,5 +1,6 @@
 <div>
   <h1> {{title}} </h1>
+  <hr style="margin-top: -10px">
   <p>
     Hvis du ønsker å se koden, mens du følger tutorialen, eller bare ønsker å klone prosjektet kan du gjøre det her.
   </p>
