added display-postit component

--- a/angular-client/src/app/searchPostit/searchPostit.component.html
+++ b/angular-client/src/app/searchPostit/searchPostit.component.html
@@ -3,15 +3,5 @@
   <div className="InputSearch">
     <input class="form-control" type="text" placeholder="søk i databasen på tittel"/>
   </div>
-  <div>
-    <ul>
-      <li *ngFor="let postit of postits">
-        <p>
-          <strong>Titel:</strong> {{postit.title}} <br>
-          <strong>Kategori:</strong> {{postit.category}} <br>
-          <strong>Beskrivelse:</strong> {{postit.description}}
-        </p>
-      </li>
-    </ul>
-  </div>
+  <display-postit></display-postit>
 </div>
